# react-native-webrtc-turbo

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CONTRIBUTING.md  DatachannelTurboModule.podspec  README.md  Webrtc.podspec  eslint.config.mjs  lefthook.yml  package-lock.json  package.json  react-native.config.js  tsconfig.json
.github/ISSUE_TEMPLATE/: config.yml
.github/actions/setup/: action.yml
.github/workflows/: build-3rdparty.yml  build-android.yml  build-ios.yml  build-library.yml  check.yml  ci.yml  npm.yml  publish-npm.yml  unittest.yml
android/: CMakeLists.txt  build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml
android/src/main/cpp/: MediaContainerAndroid.cpp  MediaStreamTrackAndroid.cpp  log.h
android/src/main/java/com/reactnativewebrtcturbo/: DatachannelTurboModulePackage.kt
android/src/main/java/com/webrtc/: Camera.kt  MicroPhone.kt  NativeMediaDevice.kt  NativeMediaDevicePackage.kt  NativeWebrtcPackage.kt  PermissionListener.kt  PermissionRequest.kt  Sound.kt  Speaker.kt  WebrtcFabric.kt  WebrtcFabricManager.kt  WebrtcFabricPackage.kt  WebrtcPackage.kt  WebrtcView.kt  WebrtcViewManager.kt
cpp/: DatachannelImpl.cpp  DatachannelImpl.h  Decoder.cpp  MediaContainer.cpp  MediaContainer.h  MediaStreamTrack.cpp  MediaStreamTrack.h  NativeDatachannel.cpp  NativeDatachannelModule.cpp  NativeDatachannelModule.h  NativeDatachannelModuleAndroid.cpp  RTCRtpReceiver.cpp  RTCRtpReceiver.h  bridgeType.h  ffmpeg.h  framepipe.cpp  framepipe.h  guid.h  negotiate.cpp  negotiate.h
cpp/__tests__/: CMakeLists.txt  main.cpp  testFFmpeg.cpp  testFramePipe.cpp  testMediaStreamTrack.cpp  testNegotiate.cpp
cpp/jsi/: NativeDatachannel.cpp  NativeDatachannel.h  bridgeType.h
example/: app.json  package.json
example/android/: settings.gradle
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/java/reactnativewebrtcturbo/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/java/webrtc/example/: MainActivity.kt  MainApplication.kt
example/android/app/src/main/res/values/: strings.xml
example/ios/: Podfile
example/ios/ReactNativeWebrtcTurboExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/ReactNativeWebrtcTurboExample.xcodeproj/: project.pbxproj
example/ios/ReactNativeWebrtcTurboExample.xcodeproj/xcshareddata/xcschemes/: ReactNativeWebrtcTurboExample.xcscheme
example/ios/ReactNativeWebrtcTurboExample.xcworkspace/: contents.xcworkspacedata
example/ios/WebrtcExample/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
example/ios/WebrtcExample.xcodeproj/: project.pbxproj
example/ios/WebrtcExample.xcodeproj/xcshareddata/xcschemes/: WebrtcExample.xcscheme
example/ios/WebrtcExample.xcworkspace/: contents.xcworkspacedata
example/src/: Answer.tsx  App.tsx  Camera.tsx  Home.tsx  Offer.tsx  SelfTest.tsx  Tabs.tsx
ios/: AudioSession.h  AudioSession.mm  Camera.h  Camera.mm  CameraSession.h  CameraSession.mm  NativeDatachannelModuleProvider.h  NativeDatachannelModuleProvider.mm  NativeMediaDeviceModuleProvider.h  NativeMediaDeviceModuleProvider.mm  OnLoad.mm  WebrtcFabric.h  WebrtcFabric.mm  WebrtcView.h  WebrtcView.mm  log.h
src/: MediaDevices.ts  MediaRecorder.ts  MediaStream.ts  MediaStreamTrack.ts  NativeDatachannel.ts  NativeDatachannelModule.ts  NativeDatachannelTurboModule.ts  NativeMediaDevice.ts  RTCPeerConnection.ts  RTCRtpTransceiver.ts  RTCTrackEvent.ts  WebrtcView.tsx  WebrtcViewNativeComponent.ts  index.tsx  uuid.ts
